# jax-autovmap

./: .gitignore  README.md  autovmap.py  pyproject.toml  requirements.txt  setup.py  test_autovmap.py
.github/workflows/: python-pytest.yml
src/: jax_autovmap.py  test_autovmap.py
