[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_autovmap"
authors = [
    { name="Mathis Gerdes", email="mathisgerdes@gmail.com" },
]
description = "Automatically broadcast inputs by dynamically applying jax.vmap"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'jax>=0.2.20',
    'jaxlib>=0.1.69',
    'numpy',
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "jax_autovmap.__version__"}