[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_autovmap"
authors = [
    { name="Mathis Gerdes", email="mathisgerdes@gmail.com" },
]
description = "Automatically broadcast inputs by dynamically applying jax.vmap given un-batched argument dimensions."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'jax>=0.4.1',
    'numpy',
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "jax_autovmap.__version__"}
