[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_autovmap"
authors = [
    { name="Mathis Gerdes", email="mathisgerdes@gmail.com" },
]
description = "Automatically broadcast inputs by dynamically applying jax.vmap given un-batched argument dimensions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'jax>=0.4.1',
    'numpy',
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    'pytest>=6.0',
    'pytest-cov',
    'hypothesis>=6.0',
]

[tool.setuptools.dynamic]
version = {attr = "jax_autovmap.__version__"}

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/test_*.py",
    "*/*_test.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
